# FileSharing

./: .gitignore  CMakeLists.txt  Makefile
client/: CMakeLists.txt  Makefile
client/include/: client.hpp
client/src/: client.cpp
include/: func.hpp
server/: CMakeLists.txt  Makefile
server/include/: Client.hpp  Shell.hpp  ls.hpp  server.hpp
server/src/: Client.cpp  Shell.cpp  ls.cpp  server.cpp
src/: func.cpp
